--- a/index.html
+++ b/index.html
@@ -2,34 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-
   <body>
-    
-    <form action="submit" class="js-search-form search-form">
-      <div class="form-group">
-        <label for="city" class="label">Enter the name of the city:</label>
-        <input type="text" name="city" class="search-input" required />
-      </div>
-      <div class="form-group">
-        <label for="days" class="label">Select number of days</label>
-        <div class="input-group">
-          <select name="days" class="days-select">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-          </select>
-          <button class="search-button">Search</button>
-        </div>
-      </div>
-    </form>
+    <ul class="js-movie-list movie-list"></ul>
+    <!-- Infinity scroll -->
+    <div class="js-guard"></div>
 
-    <ul class="js-list weather-cards"></ul>
-
+    <!-- Load more -->
+    <!-- <div class="button-container">
+        <button class="js-load-more load-more-hidden" hidden>Load more</button>
+    </div> -->
     <script src="./main.js"></script>
   </body>
 </html>
