--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <ul class="js-movie-list movie-list"></ul>
     <!-- Infinity scroll -->
-    <div class="js-guard"></div>
+    <!-- <div class="js-guard"></div> -->
 
     <!-- Load more -->
-    <!-- <div class="button-container">
+    <div class="button-container">
         <button class="js-load-more load-more-hidden" hidden>Load more</button>
-    </div> -->
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
