add file js infinity scroll

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
     <ul class="js-movie-list movie-list"></ul>
     <!-- Infinity scroll -->
-    <!-- <div class="js-guard"></div> -->
+    <div class="js-guard"></div>
 
     <!-- Load more -->
-    <div class="button-container">
+    <!-- <div class="button-container">
         <button class="js-load-more load-more-hidden" hidden>Load more</button>
-    </div>
-    <script src="./main.js"></script>
+    </div> -->
+    <!-- <script src="./btn_load_more.js"></script> -->
+    <script src="./infinity_scroll.js"></script>
   </body>
 </html>
